[DURACOM-447] fix after rebase