@@ -2004,8 +2004,28 @@ prevent the generation of resource policy entry values with null dspace_object a
 
         final Supplier<Integer> placeSupplier = () -> place;
 
-        return addMetadata(context, dso, metadataField, lang, Arrays.asList(value),
-                Arrays.asList(authority), Arrays.asList(confidence), placeSupplier)
+        return addMetadata(context, dso, metadataField, lang, Collections.singletonList(value),
+                           Collections.singletonList(authority), List.of(confidence), placeSupplier)
+                .stream().findFirst().orElse(null);
+    }
+
+    @Override
+    public MetadataValue addMetadataInPlaceSecured(Context context, Item dso, String schema, String element,
+                                                   String qualifier, String lang, String value,
+                                                   String authority, int confidence, int place,
+                                                   Integer securityValue)
+        throws SQLException {
+
+        // We will not verify that they are valid entries in the registry
+        // until update() is called.
+        MetadataField metadataField = metadataFieldService.findByElement(context, schema, element, qualifier);
+        if (metadataField == null) {
+            throw new SQLException("bad_dublin_core schema=" + schema + "." + element + "." + qualifier +
+                    ". Metadata field does not exist!");
+        }
+        final Supplier<Integer> placeSupplier = () -> place;
+        return addMetadata(context, dso, metadataField, lang, Collections.singletonList(value),
+                           Collections.singletonList(authority), List.of(confidence), placeSupplier, securityValue)
                 .stream().findFirst().orElse(null);
     }
 
